--- a/literature.bib
+++ b/literature.bib
@@ -443,19 +443,18 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title        = {{Use Cases and Requirements for JSON Object Signing and Encryption (JOSE)}},
   year         = {2014},
   abstract     = {Many Internet applications have a need for object-based security mechanisms in addition to security mechanisms at the network layer or transport layer. For many years, the Cryptographic Message Syntax (CMS) has provided a binary secure object format based on ASN.1. Over time, binary object encodings such as ASN.1 have become less common than text-based encodings, such as the JavaScript Object Notation (JSON). This document defines a set of use cases and requirements for a secure object format encoded using JSON, drawn from a variety of application security mechanisms currently in development.},
-  doi          = {10.17487/RFC7165},
+  eprint       = {https://www.rfc-editor.org/info/rfc7165},
   number       = {7165},
   pagetotal    = {25},
   publisher    = {RFC Editor},
   series       = {Request for Comments},
-  url          = {https://www.rfc-editor.org/info/rfc7165},
 }
 
-@TechReport{Jones2015,
+@TechReport{JWA2015,
   author = {Jones, Michael},
-  title  = {JSON web algorithms (JWA)},
+  title  = {JSON Web Algorithms (JWA)},
   year   = {2015},
-  url    = {https://www.rfc-editor.org/rfc/rfc7518},
+  eprint = {https://www.rfc-editor.org/rfc/rfc7518},
 }
 
 @TechReport{Barker2017,
@@ -466,11 +465,11 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url    = {https://csrc.nist.gov/CSRC/media/Publications/sp/800-56a/rev-3/draft/documents/sp800-56ar3-draft.pdf},
 }
 
-@TechReport{Jones2015a,
+@TechReport{JWT2015,
   author = {Jones, Michael and Bradley, John and Sakimura, Nat},
-  title  = {Json web token (JWT)},
+  title  = {JSON Web Token (JWT)},
   year   = {2015},
-  url    = {https://www.rfc-editor.org/rfc/rfc7519},
+  eprint = {https://www.rfc-editor.org/rfc/rfc7519},
 }
 
 @MastersThesis{Hagg2022,
@@ -576,6 +575,63 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   volume   = {113},
   abstract = {Since 2013, a stream of disclosures has prompted reconsideration of surveillance law and policy. One of the most controversial principles, both in the United States and abroad, is that communications metadata receives substantially less protection than communications content. Several nations currently collect telephone metadata in bulk, including on their own citizens. In this paper, we attempt to shed light on the privacy properties of telephone metadata. Using a crowdsourcing methodology, we demonstrate that telephone metadata is densely interconnected, can trivially be reidentified, and can be used to draw sensitive inferences.},
   eprint   = {https://www.pnas.org/doi/pdf/10.1073/pnas.1508081113},
+}
+
+@TechReport{JWE2015,
+  author = {Jones, Michael and Hildebrand, Joe},
+  title  = {JSON Web Encryption (JWE)},
+  year   = {2015},
+  eprint = {https://www.rfc-editor.org/rfc/rfc7516},
+}
+
+@TechReport{JWS2015,
+  author = {Jones, Michael and Bradley, John and Sakimura, Nat},
+  title  = {JSON Web Signature (JWS)},
+  year   = {2015},
+  eprint = {https://www.rfc-editor.org/rfc/rfc7515},
+}
+
+@TechReport{JWK2015,
+  author = {Jones, Michael},
+  title  = {JSON Web Key (JWK)},
+  year   = {2015},
+  eprint = {https://www.rfc-editor.org/rfc/rfc7517},
+}
+
+@TechReport{TLS2018,
+  author = {Rescorla, Eric},
+  title  = {The Transport Layer Security (TLS) Protocol Version 1.3},
+  year   = {2018},
+  eprint = {https://www.rfc-editor.org/rfc/rfc8446},
+}
+
+@TechReport{IPSEC2011,
+  author    = {Frankel, Sheila and Krishnan, Suresh},
+  title     = {IP Security (IPsec) and Internet Key Exchange (IKE) Document Roadmap},
+  year      = {2011},
+  eprint    = {https://www.rfc-editor.org/rfc/rfc6071},
+  publisher = {RFC Editor},
+}
+
+@Article{Wolf2007,
+  author    = {Wolf, Marko and Weimerskirch, Andr{\'e} and Wollinger, Thomas},
+  journal   = {EURASIP Journal on Embedded Systems},
+  title     = {State of the art: Embedding security in vehicles},
+  year      = {2007},
+  pages     = {1--16},
+  volume    = {2007},
+  eprint    = {https://jes-eurasipjournals.springeropen.com/articles/10.1155/2007/74706},
+  publisher = {Springer},
+}
+
+@InProceedings{An2002,
+  author       = {An, Jee Hea and Dodis, Yevgeniy and Rabin, Tal},
+  booktitle    = {International conference on the theory and applications of cryptographic techniques},
+  title        = {On the security of joint signature and encryption},
+  year         = {2002},
+  organization = {Springer},
+  pages        = {83--107},
+  eprint       = {https://link.springer.com/chapter/10.1007/3-540-46035-7_6},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
