--- a/txt/3-requirements.tex
+++ b/txt/3-requirements.tex
@@ -127,7 +127,7 @@ In this scenario, however, Alice did not want to share the log with Bob.
 The log was simply forwarded by Eve without permission.
 This attack demonstrates how an active attacker could share logs with unintended users.
 The attacker forwards a valid log to an arbitrary user in the system.
-The implemented protocol in the context of this thesis must defend against this attack.
+The implemented protocol must defend against this attack.
 
 \subsubsection{The users receiving a shared log can verify that the log was created by a valid monitor.}
 
