--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -190,6 +190,7 @@ Since \emph{JWS} and \emph{JWE} tokens can also be nested into each other, \emph
     \item
     The shared log is finally encrypted to obtain a \emph{JWE} token.
     This token also contains the unencrypted metadata within its protected header.
+    The metadata, however, is still integrity protected.
 \end{enumerate}
 
 
